--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,8 +1,8 @@
 <nav> 
 <ul>
 <% if !user_signed_in? %>
-  <li><%= link_to "Signup", new_user_registration_path %></li>
-  <li><%= link_to "Login", new_user_session_path %></li>
+  <li><%= link_to "Signup", signup_path %></li>
+  <li><%= link_to "Login", login_path %></li>
 <% else %>
   <li><%= link_to "Home", root_path %></li>
   <li><%= link_to "Logout", destroy_user_session_path, method: "delete" %></li>
