--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,4 +1,5 @@
-<%= @project.name %>
+<h2>Project: <%= @project.name %></h2>
+<p>Description: <%= @project.description %></p>
 <ul> 
 <p>Teammates on this project</p>
 <% @project.users.each do |user| %>
@@ -20,4 +21,6 @@
   <li><%= task.content %>
 <% end %><br><br>
 
-<%= link_to "Add More Tasks", new_project_task_path(@project) %>
+<p><%= link_to "Edit Project", edit_project_path(@project) %></p>
+
+<%= link_to "Add Another Task", new_project_task_path(@project) %>
