--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,2 @@
 <h1>New Task for Project <%= @task.project.name %></h1>
-<%= form_for @task do |f| %>
-  <%= f.hidden_field :project_id %>
-  <%= f.label :content %>
-  <%= f.text_field :content %>
-
-  <%= f.submit %>
-<% end %>
+<%= render partial: 'form' %>
