update spacing and text field sizes

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -4,4 +4,8 @@
   <%= f.text_field :content %>
 
   <%= f.submit %>
-<% end %>
+<% end %><br>
+
+
+
+<%= link_to "Go Back to Project", project_path(@task.project) %>
