--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,14 +1,14 @@
 <%= form_for @project do |f| %>
-   <%= f.label :name %>
-   <%= f.text_field :name %>
-   <%= f.label :description %>
-   <%= f.text_area :description %>
+   <%= f.label :name %><br>
+   <%= f.text_field :name, size: '38' %><br><br>
+   <%= f.label :description %><br>
+   <%= f.text_area :description, size: '40x5' %>
    <p>Team members on the project</p>
    <%= f.collection_check_boxes :user_ids, User.all, :id, :name %>
    <p>Tasks</p>
    <%= f.fields_for :tasks do |task| %>
     <%= task.hidden_field :id %>
-    <li><%= task.text_field :content %></li><br>
+    <li><%= task.text_field :content, size: '35' %></li><br>
     <% end %>
 
 <%= f.submit %>
