--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,12 @@
+<% if flash[:error] %>
+<% flash[:error].each do |e| %>
+<li><%= e %></li>
+<% end %>
+<% binding.pry %>
+<% flash.clear %>
+<% end %>
+<% binding.pry %>
+
 <%= form_for @task do |f| %>
   <%= f.hidden_field :project_id %>
   <%= f.label :content %>
