--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@
   display: table;
 }
 
-#error_explanation {
+.error_explanation {
   width: 450px;
   border: 2px solid red;
   padding: 7px 7px 0;
