--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,13 @@
 <% if flash[:error] %>
+<div class="error_explanation">
+<strong>Errors:</strong>
 <% flash[:error].each do |e| %>
 <li><%= e %></li>
 <% end %>
 <% binding.pry %>
 <% flash.clear %>
 <% end %>
+</div>
 
 <%= form_for @project do |f| %>
    <%= f.label :name %><br>
