update task show view

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,11 +1,12 @@
 
 <p>For Project: <%= link_to @task.project.name, project_path(@task.project) %></p>
 <p>Task: <%= @task.content %></p>
-<p><%= @task.complete == true ? "Status: completed" : "Status: not completed" %><p>
+<p><%= @task.complete == true ? "Status: completed" : "Status: not completed" %>
+<%= form_for @task, :url => task_complete_path(@task), :method => 'get' do |f| %>
+    <%= f.hidden_field :id %>
+    <%= f.submit value='Completed' %>
+<% end %><p>
 
-<%= link_to "Change Status", task_complete_path(@task) %>
-
-<%= link_to "Edit Task", edit_project_task_path(@task.project, @task) %>
- 
+<%= link_to "Edit Task", edit_project_task_path(@task.project, @task) %> |
 
 <%= link_to "Delete Task", @task, method: :delete %>
