--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,6 +23,6 @@
 <% end %><br><br>
 <% end %>
 
-<%= link_to "Add Another Task", new_project_task_path(@project) %>
-<p><%= link_to "Edit Project", edit_project_path(@project) %></p>
+<%= link_to "Add Another Task", new_project_task_path(@project) %> | 
+<%= link_to "Edit Project", edit_project_path(@project) %> | 
 <%= link_to "Delete Project", @project, method: :delete %>
