update styling of task show page

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,14 +1,23 @@
 <h2>Task for Project <%= @task.project.name %></h2>
-<p>Content: <%= @task.content %></p>
+
+<p>
+  <strong>Content:</strong>
+  <%= @task.content %>
+</p>
+
 <table>
   <tr>
-    <td><%= @task.complete == true ? "Status: completed" : "Status: not completed" %></td>
+    <td>
+      <strong>Status:</strong>
+      <%= @task.complete == true ? "completed" : "not completed" %>
+    </td>
     <td><%= form_for @task, :url => task_complete_path(@task), :method => 'get' do |f| %>
       <%= f.hidden_field :id %>
       <%= f.submit value='Change Status' %>
     <% end %></td>
   </tr>
-</table><br>
+</table><br><br>
 
 <%= link_to "Edit Task", edit_project_task_path(@task.project, @task) %> |
-<%= link_to "Delete Task", @task, method: :delete %>
+<%= link_to "Delete Task", @task, method: :delete %> |
+<%= link_to "Go Back to Project", project_path(@task.project) %><br>
