--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Task for Project <%= @task.project.name %></h2>
+<h2>Task for Project: <%= @task.project.name %></h2>
 
 <p>
   <strong>Content:</strong>
