--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,78 @@
  *= require_self
  */
 
+ @import url('https://fonts.googleapis.com/css?family=Hind+Siliguri&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Arvo&display=swap');
+
+
+@media screen {
+  /* --- Reset Styles --- */
+  * {
+    /* list-style: none; */
+    margin: 0;
+    padding: 0;
+  }
+
+  html, body {
+    height: 100%;
+    width: 100%;
+  }
+
+  /* --- Welcome Page Styles --- */
+  body {
+    background-color: #8591ad;
+    color: #333;
+    font-family: 'Hind Siliguri', sans-serif;
+    line-height: 18px;
+  }
+
+  .wrapper {
+    background: #fff;
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+    margin: 16px auto;
+    max-width: 960px;
+    padding: 3%; /* 18px / 800px */
+    width: 80%;
+  }
+
+  h1, h2, h3 {
+    font-family: 'Arvo', serif; 
+  }
+
+  h1 {
+    font-size: 36px;
+    line-height: 54px;
+  }
+
+  h2 {
+    border-bottom: 2px solid #ccc;
+    font-size: 24px;
+    line-height: 36px;
+    margin-bottom: 16px;
+  }
+
+  h3 {
+    border-bottom: 2px solid #ccc;
+    font-size: 18px;
+    line-height: 36px;
+    margin-bottom: 16px;
+  }
+
+  p {
+    margin-bottom: 18px;
+  }
+
+  .main {
+    overflow: hidden;
+  }
+
+  .content {
+    float: left;
+    width: 60%; /* 480px / 800px */
+  }
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
@@ -30,4 +102,6 @@
 
 th {
   text-align: left;
+}
+
 }
