add additional css styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,6 +73,12 @@
     margin-bottom: 16px;
   }
 
+  h4 {
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+  }
+
   p {
     margin-bottom: 18px;
   }
@@ -86,22 +92,26 @@
     width: 60%; /* 480px / 800px */
   }
 
-.field_with_errors {
+  .field_with_errors {
   padding: 2px;
   background-color: red;
   display: table;
-}
+  }
 
-.error_explanation {
+  .error_explanation {
   width: 450px;
   border: 2px solid red;
   padding: 7px 7px 0;
   margin-bottom: 20px;
   background-color: #f0f0f0;
-}
+  }
 
-th {
+  th {
   text-align: left;
-}
+  }
+
+  .field {
+    margin-bottom: 10px;
+  }
 
 }
