--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,2 +1,3 @@
 <h1>Project Align</h1>
 <h3>Project Management Tool for your teams</h3>
+<h4><%= link_to "Signup", signup_path %> or <%= link_to "Login", login_path %></h4>
