--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,9 +1,12 @@
 <h2>Welcome <%= current_user.name %></h2>
 
-<h3>Your Current Projects</h3>
-<ul>
+<h4>Your Current Projects</h4>
+<table>
   <% @projects.each do |project| %>
-    <li><%= link_to project.name, project_path(project) %></li>
+  <tr>
+    <td><li><%= link_to project.name, project_path(project) %></li></td>
   <% end %>
-</ul>
+  </tr>
+</table><br><br>
+
 <%= link_to "Create a new Project", new_project_path %><br>
