--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -12,9 +12,9 @@
   <%= f.label :name %><br>
   <%= f.text_field :name, size: '38' %><br><br>
   <%= f.label :description %><br>
-  <%= f.text_area :description, size: '40x5' %>
+  <%= f.text_area :description, size: '40x5' %><br>
   <p>Team members on the project</p>
-  <%= f.collection_check_boxes :user_ids, User.all, :id, :name %>
+  <%= f.collection_check_boxes :user_ids, User.all, :id, :name %><br><br>
   <p>Tasks</p>
   <%= f.fields_for :tasks do |task| %>
     <%= task.hidden_field :id %>
