--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -9,4 +9,4 @@
   </tr>
 </table><br><br>
 
-<%= link_to "Create a new Project", new_project_path %><br>
+<%= link_to "Create a New Project", new_project_path %><br>
