--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,7 @@
     border-bottom: 2px solid #ccc;
     font-size: 24px;
     line-height: 36px;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
   }
 
   h3 {
@@ -112,6 +112,10 @@
 
   th {
   text-align: left;
+  }
+
+  td { 
+    padding-right: 7px;
   }
 
   .field {
