--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -40,10 +40,10 @@
       <td><li><%= link_to task.content, project_task_path(@project, task) %></li></td>
     <% end %>
     </tr>
-  </table><br><br>
+  </table><br>
 <% end %>
 
-<br><br>
+<br>
 <%= link_to "Add Another Task", new_project_task_path(@project) %> | 
 <%= link_to "Edit Project", edit_project_path(@project) %> | 
 <%= link_to "Delete Project", @project, method: :delete %>
