update code spacing

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,17 +6,17 @@
 
 <table> 
   <tr>
-    <th>Teammates on this project</th>
+    <th>Team members on this project</th>
   <tr>
   <% @project.users.each do |user| %>
   <tr>
-    <td><li><%= user.name %> <%= '(project creator)' if UserProject.find_by(user_id: user.id, project_id: @project.id).project_creator == true %></li></td>
-  <% end %>
+    <td><li><%= user.name %> <%= '(project creator)' if UserProject.find_by(user_id: user.id, project_id: @project.id).project_creator == true %></li></td> 
   </tr>
+  <% end %>
 </table>
 
 <table id="first_table">
-   <tr>
+  <tr>
     <th colspan="2">Tasks To Do</th>
   </tr>
   <% @project.tasks.not_completed.each do |task| %>
@@ -26,8 +26,8 @@
       <%= f.hidden_field :id %>
       <%= f.submit value='Completed' %>
     <% end %></td>
-  <% end %>
   </tr>
+  <% end %>
 </table>
 
 <% if @project.tasks.completed.empty? == false %>
@@ -38,8 +38,8 @@
     <% @project.tasks.completed.each do |task| %>
     <tr>
       <td><li><%= link_to task.content, project_task_path(@project, task) %></li></td>
-    <% end %>
     </tr>
+    <% end %>
   </table><br>
 <% end %>
 
