--- a/app/views/application/welcome.html.erb
+++ b/app/views/application/welcome.html.erb
@@ -1,4 +1,3 @@
 <h1>Project Align</h1>
 <h3>Project management tool for your teams</h3><br>
-<h4><%= link_to "Sign up", signup_path %> or <%= link_to "Log in", login_path %></h4>
-<br>
+<h4><%= link_to "Sign up", signup_path %> or <%= link_to "Log in", login_path %></h4><br>
