--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,2 @@
-<h2>Edit Task for Project <%= @task.project.name %></h2>
+<h2>Edit Task for Project: <%= @task.project.name %></h2>
 <%= render partial: 'form' %>
