--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,3 +1,3 @@
-<h2>New Task for Project <%= @task.project.name %></h2>
+<h2>New Task for Project: <%= @task.project.name %></h2>
 <%= render partial: 'form' %>
 
