--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -14,7 +14,7 @@
     <td>
       <%= form_for @task, :url => task_complete_path(@task), :method => 'get' do |f| %>
       <%= f.hidden_field :id %>
-      <%= f.submit value='Change Status' %>
+      <%= f.submit value='Change status' %>
       <% end %>
     </td>
   </tr>
