--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,11 @@
+<% if flash[:notice] %>
+<% binding.pry %>
+  <div class="error_explanation">
+    <%= flash[:notice] %>
+    <% flash.clear %>
+  </div>
+<% end %>
+
 <h2>Welcome <%= current_user.name %></h2>
 
 <h4>Your Current Projects</h4>
