--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <% if flash[:notice] %>
 <% binding.pry %>
-  <div class="error_explanation">
+  <div class="notice_explanation">
     <%= flash[:notice] %>
     <% flash.clear %>
   </div>
