--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -99,17 +99,17 @@
   }
 
   .error_explanation {
-    width: 450px;
+    width: 400px;
     border: 2px solid red;
-    padding: 7px 7px 0;
+    padding: 7px 10px 2px;
     margin-bottom: 20px;
     background-color: #f0f0f0;
   }
   
   .notice_explanation {
-    width: 450px;
+    width: 400px;
     border: 2px solid #333;
-    padding: 7px 7px 0;
+    padding: 7px 10px 2px;
     margin-bottom: 20px;
     background-color: #f0f0f0;
   }
