--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -111,6 +111,7 @@
     border: 2px solid #333;
     padding: 7px 10px 2px;
     margin-bottom: 20px;
+    margin-top: 30px;
     background-color: #f0f0f0;
   }
 
