update link name

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -51,6 +51,6 @@
 <% end %>
 
 <br>
-<%= link_to "Add Another Task", new_project_task_path(@project) %> | 
+<%= link_to "Add Task", new_project_task_path(@project) %> | 
 <%= link_to "Edit Project", edit_project_path(@project) %> | 
 <%= link_to "Delete Project", @project, method: :delete %>
